# AGE

./: .gitignore  .gitmodules  CMakeLists.txt  sonar-project.properties
.github/workflows/: commit-validate.yml  format-validate.yml
docs/: Formatting.adoc  Registry.adoc  SettingUpEnvironment.adoc  Testing.adoc
src/core/intern/: QtDefines.hpp
src/core/lang/array/: ArrayRef.hpp
src/core/lang/coro/: Generator.hpp
src/core/lang/filesystem/: PathAwareFstream.cpp  PathAwareFstream.hpp
src/core/lang/flag/: FlagEnum.hpp
src/core/lang/generic/: Concepts.hpp  ExplicitComparisonsFromSpaceship.hpp  OperatorsWithImplicitConstruction.hpp
src/core/lang/iter/: Sentinel.hpp
src/core/lang/string/: StringRef.cpp  StringRef.hpp
src/core/lang/thread/: AsyncRunner.cpp  AsyncRunner.hpp
src/core/logging/: Logger.cpp  Logger.hpp
src/core/platform/: PathUtils.cpp  PathUtils.hpp
src/visualizer/binding/: Action.hpp  ActionBindings.inc
src/visualizer/graphPanel/: GraphPanel.cpp  GraphPanel.hpp
src/visualizer/menuBar/: VisualizerWindowMenuBar.cpp  VisualizerWindowMenuBar.hpp
src/visualizer/settings/: Registry.cpp  Registry.hpp  SettingsRegistry.cpp  SettingsRegistry.hpp  SettingsRegistryOld.cpp  SettingsRegistryOld.hpp
src/visualizer/vertex/: Vertex.cpp  Vertex.hpp
src/visualizer/vertexMenu/: VertexMenu.cpp  VertexMenu.hpp
src/visualizer/window/: VisualizerWindow.cpp  VisualizerWindow.hpp
test/metatests/: CMakeLists.txt  ConceptsTest.cpp
test/unittests/: ArrayRefTest.cpp  AsyncRunnerTest.cpp  CMakeLists.txt  DummyTest.cpp  FlagEnumTest.cpp  GeneratorTest.cpp  LoggerTest.cpp  PathAwareFstreamTest.cpp  SettingsRegistryTest.cpp  StringRefTest.cpp  UnitTestsMain.cpp
test/unittests/qtMock/: GraphPanelTest.cpp  QAction  QApplication  QCloseEvent  QCommon  QCore  QLayout  QMenu  QMenuBar  QMouseEvent  QObject  QPaintDevice  QPaintEvent  QPainter  QPalette  QPoint  QPointF  QScreen  QSize  QString  QVBoxLayout  QWidget  VertexTest.cpp  VisualizerWindowTest.cpp  visualizer_mock.cpp
test/unittests/qtMock/window/: VisualizerWindow.hpp
